--- a/extensions/_page_elements.scss
+++ b/extensions/_page_elements.scss
@@ -11,9 +11,9 @@
 }
 
 #page-content {
-    flex: 1;
     @include display-flex;
     @include flex-direction(column);
+    height: 100%;
 }
 
 .pages-container {
